# morpion

./: debug_error_logs.txt  error_logs.txt  gmon.out  morpion.cbp  morpion.cbp.old  morpion.depend  morpion.depend.old  morpion.layout  morpion.layout.old  standard_logs.txt
src/: Affichage.c  Affichage.h  Define.h  Define_futur.h  Instruction.c  Instruction.h  Jeu.c  Jeu.h  Main.h  Makefile  Makefile.am  Makefile.am~  Makefile.in  Tournoi.c  Tournoi.h  error_logs.txt  ia.c  ia.h  logs.c  main.c  minmax.c  morp_sdl.c  morp_sdl.h  morpion  standard_logs.txt  texture.h
src/.deps/: Affichage.Po  Instruction.Po  Jeu.Po  Tournoi.Po  ia.Po  main.Po  morp_sdl.Po  texture.Po
src/ihm/src/: button_sdl.c  button_sdl.h  case_sdl.c  case_sdl.h  chain_list.c  chain_list.h  config_cursor_sdl.c  config_cursor_sdl.h  define_sdl.h  dialog_sdl.c  dialog_sdl.h  game_config_sdl.c  game_config_sdl.h  ihm_sdl.c  ihm_sdl.h  logs.c  logs.h  main.c  state_button_sdl.c  state_button_sdl.h  toggle_button_sdl.c  toggle_button_sdl.h  tooltip_sdl.c  tooltip_sdl.h  widget_sdl.c  widget_sdl.h
src/ihm/src/.deps/: button_sdl.Po  case_sdl.Po  chain_list.Po  config_cursor_sdl.Po  dialog_sdl.Po  game_config_sdl.Po  ihm_sdl.Po  logs.Po  state_button_sdl.Po  toggle_button_sdl.Po  tooltip_sdl.Po  widget_sdl.Po
src/ihm/src/docs/: Doxyfile
src/ihm/src/docs/html/: Affichage_8h_source.html  Define_8h_source.html  Instruction_8h_source.html  Jeu_8h_source.html  Main_8h.html  Main_8h__incl.map  Main_8h__incl.md5  Main_8h_source.html  Tournoi_8h_source.html  annotated.html  button__sdl_8c.html  (+296 more)
(+142 files in other folders)
